Se realiza la kata 10 con sus respectiva prueba funcionando