@@ -8,6 +8,8 @@ import util.DataUtil;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 /*
     Goal: Create a datastructure from the given data:
@@ -55,9 +57,16 @@ public class Kata10 {
         List<Map> lists = DataUtil.getLists();
         List<Map> videos = DataUtil.getVideos();
 
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
+         return lists.stream()
+                .map(elementList -> Map.of("name", elementList.get("name"), "videos", videos.stream()
+                        .filter(elementVideo ->  elementList.get("id").equals(elementVideo.get("listId")))
+                        .map(elementVideo -> ImmutableMap.of("id", elementVideo.get("id"), "title", elementVideo.get("title")))
+                        .collect(Collectors.toList())
+                )).collect(Collectors.toList());
+
+        /*return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
                 ImmutableMap.of("id", 5, "title", "The Chamber"),
                 ImmutableMap.of("id", 3, "title", "Fracture")
-        )));
+        )));*/
     }
 }
